# ChangeLog for sys-power/powermgmt-base
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/powermgmt-base/ChangeLog,v 1.9 2006/01/21 18:35:05 josejx Exp $

  21 Jan 2006; Joseph Jezak <josejx@gentoo.org> powermgmt-base-1.22.ebuild:
  Marked ~ppc for bug #115154.

  11 Dec 2005; Steev Klimaszewski <steev@gentoo.org>
  powermgmt-base-1.22.ebuild:
  Not stable on x86. Sorry

*powermgmt-base-1.22 (11 Dec 2005)

  11 Dec 2005; Steev Klimaszewski <steev@gentoo.org>
  +powermgmt-base-1.22.ebuild:
  Bump to powermgmt-base 1.22.

  09 Dec 2005; Tom Gall <tgall@gentoo.org> powermgmt-base-1.21.ebuild:
  added ~ppc64

  17 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

  11 Jul 2005; Simon Stelling <blubb@gentoo.org> powermgmt-base-1.21.ebuild:
  added ~amd64 keyword

  08 Apr 2005; Stefan Schweizer <genstef@gentoo.org>
  powermgmt-base-1.21.ebuild:
  x86 stable

*powermgmt-base-1.21 (14 Mar 2005)

  14 Mar 2005; Ciaran McCreesh <ciaranm@gentoo.org> +metadata.xml,
  +powermgmt-base-1.21.ebuild:
  Moved from sys-apps/powermgmt-base to sys-power/powermgmt-base.

*powermgmt-base-1.21 (29 Jan 2005)

  29 Jan 2005; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +powermgmt-base-1.21.ebuild:
  New ebuild thanks to Dennis NienhÃ¼ser <fragfred@gmx.de> in bug 76516
