@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powermgmt-base/powermgmt-base-1.21.ebuild,v 1.6 2005/12/09 22:46:44 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powermgmt-base/powermgmt-base-1.21.ebuild,v 1.7 2006/02/07 02:40:35 agriffis Exp $
 
 DESCRIPTION="Script to test whether computer is running on AC power"
 HOMEPAGE="http://packages.debian.org/testing/utils/powermgmt-base"
@@ -8,7 +8,7 @@ SRC_URI="mirror://debian/pool/main/p/${PN}/${PN}_${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc64 x86"
+KEYWORDS="~amd64 ia64 ~ppc64 x86"
 IUSE=""
 
 RDEPEND="sys-apps/gawk"
