@@ -1,6 +1,10 @@
 # ChangeLog for sys-power/powermgmt-base
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powermgmt-base/ChangeLog,v 1.9 2006/01/21 18:35:05 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powermgmt-base/ChangeLog,v 1.10 2006/02/07 02:40:35 agriffis Exp $
+
+  07 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  powermgmt-base-1.21.ebuild:
+  Mark 1.21 stable on ia64
 
   21 Jan 2006; Joseph Jezak <josejx@gentoo.org> powermgmt-base-1.22.ebuild:
   Marked ~ppc for bug #115154.
